# wifidrop

./: .gitignore  LICENSE  README.md  config.js  drop.js  index.html  install.ps1  main.js  manifest.json  package-lock.json  package.json  pyproject.toml  style.css  sw.js  utils.js  vite.config.js
.well-known/: assetlinks.json
assets/: index-B8Rfehlm.js  index-BBXmeDnd.js  index-BTveTxS8.css  index-BjJdP9rp.js  index-BjMoOn1W.js  index-CXUWzGQS.css  index-DE4YLRVW.js  index-DTLKoQjF.js  index-DfEc_TzG.js  index-Tjmgvwtp.css  index-xgESz2tv.css
cli/: wifidrop.js
snap/: snapcraft.yaml
snap/gui/: wifidrop.desktop
src/: config.js  drop.js  index.html  main.js  style.css  utils.js
src/public/: CNAME  manifest.json  offline.html  sw.js
src/public/streamSave/: streamSave.js  streamSaveServiceWorker.js
streamSave/: LICENSE
tools/choco/: wifidrop.nuspec
tools/choco/tools/: chocolateybeforemodify.ps1  chocolateyinstall.ps1  chocolateyuninstall.ps1
tools/deb/: control  postinst  postrm
tools/deb/data/: wifidrop
tools/launcher/: wifidrop-win.bat  wifidrop.bat  wifidrop.cs  wifidrop.desktop  wifidrop.sed  wifidrop.sh  wifidrop.txt
tools/pippkg/: __init__.py
tools/scoop/: wifidrop.json
tools/util/: editversion.bat  install.bat  install.ps1  install.sed  install.sh
tools/winget/manifests/n/NarojilStudio/WIFIDrop/0.1.0/: NarojilStudio.WIFIDrop.installer.yaml  NarojilStudio.WIFIDrop.locale.en-US.yaml  NarojilStudio.WIFIDrop.yaml
